--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,14 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<title>Eat-Da-Burger Menu</title>
+	<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/assets/js/burger.js"></script>
 </head>
 
 <body>
-	<img src="/assets/img/burger.png" width="400px" id="burgerImg">
+	<div class="bg-warning">
+	<div class="row">
+		<div class="imgContainer justify-content-center text-center mx-auto">
+			<img class="w-25" src="/assets/img/burger.png" width="400px" id="burgerImg">
+		</div>
+	</div>
 
 	{{{ body }}}
 
+	</div>
 </body>
 </html>
